--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#E9F2F4</color>
+    <color name="colorPrimaryDark">#5ABBd0</color>
+    <color name="colorAccent">#F26644</color>
+    <color name="white"> #FFFFFF</color>
 </resources>
