--- a/app/src/main/res/layout/main_acitivity.xml
+++ b/app/src/main/res/layout/main_acitivity.xml
@@ -22,7 +22,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <fragment
-        android:id="@+id/my_nav_host_fragment"
+        android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
