--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#5ABBd0</color>
     <color name="colorAccent">#F26644</color>
     <color name="white"> #FFFFFF</color>
+    <color name="medium_gray">#A5ACAF</color>
 </resources>
